--- a/style.css
+++ b/style.css
@@ -8,10 +8,16 @@ main {
     align-items: center;
 }
 
+input {
+    outline: none;
+    width: 100px;
+    height: 30px;
+}
+
 .notification {
     background-color: rgba(255, 255, 255, 0.2);
-    height: 700px;
-    width: 700px;
+    height: 600px;
+    width: 600px;
     border-radius: 50%;
 }
 
